--- a/content/week1/C2_introduccion.ipynb
+++ b/content/week1/C2_introduccion.ipynb
@@ -49,9 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello World!\")"
    ]
@@ -65,9 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Texto 1\n",
+      "Texto 2\n",
+      "Texto 3\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Texto 1\")\n",
     "print(\"Texto 2\")\n",
@@ -83,9 +101,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Texto 1\n",
+      "Texto 2\n",
+      "Texto 3\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Texto 1\\nTexto 2\\nTexto 3\")"
    ]
@@ -106,9 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, ¿Cómo termina la semana, qué tal el juernes?\n",
+      "¡Excelente!\n",
+      "Oiga, pues ¡Excelente!\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hola, ¿Cómo termina la semana, qué tal el juernes?')\n",
     "respuesta = input()\n",
@@ -125,9 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(respuesta)"
    ]
@@ -141,9 +190,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "a = 100\n",
     "print(a)\n",
@@ -152,9 +210,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "A = 5\n",
     "print(A == a)"
@@ -162,9 +228,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Podemos redefinir una variable\n",
     "β = 100.0\n",
@@ -183,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,9 +298,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n",
+      "12\n",
+      "45\n",
+      "5.0\n",
+      "3375\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "var1 = 15\n",
     "var2 = 3\n",
@@ -242,7 +330,7 @@
     "# División (/)\n",
     "print(var1 / var2)\n",
     "\n",
-    "# Potencia (^ o **)\n",
+    "# Potencia (**)\n",
     "print(var1 ** var2)\n",
     "\n",
     "# Módulo (%)\n",
@@ -260,9 +348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "523.3333333333334"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(4/3) * 3.14 * (5**3)"
    ]
@@ -295,9 +394,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
     "bandeja_paisa = (\"frijol\", \"carne molida\", \"chicharrón\")\n",
     "\n",
@@ -307,9 +414,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chicharrón\n"
+     ]
+    }
+   ],
    "source": [
     "# Index\n",
     "print(bandeja_paisa[2]) # ¡Importante! El conteo de índices inicia desde 0"
@@ -317,9 +432,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/lk/pgdzrh1s1xl782rn3b59kcx80000gn/T/ipykernel_6453/1848915863.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Si intentamos modificarlo...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbandeja_paisa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"chorizo\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "# Si intentamos modificarlo...\n",
     "bandeja_paisa[4] = \"chorizo\""
@@ -340,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,18 +481,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Nombre': 'Diomedes',\n",
+       " 'Apellido': 'Díaz',\n",
+       " 'Fecha Nacimiento': '26/Mayo/1957',\n",
+       " 'Canciones': ['Tú eres la reina', 'Sin medir distancias', 'Cuatro fiestas']}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "estudiante"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nombre': 'Diomedes', 'Apellido': 'Díaz', 'Fecha Nacimiento': '26/Mayo/1957', 'Canciones': ['Tú eres la reina', 'Sin medir distancias', 'Cuatro fiestas']}\n"
+     ]
+    }
+   ],
    "source": [
     "print(estudiante)"
    ]
@@ -379,9 +528,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Nombre', 'Apellido', 'Fecha Nacimiento', 'Canciones'])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "estudiante.keys()"
    ]
@@ -395,9 +555,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26/Mayo/1957\n",
+      "Sin medir distancias\n"
+     ]
+    }
+   ],
    "source": [
     "print(estudiante['Fecha Nacimiento'])\n",
     "print(estudiante['Canciones'][1])"
@@ -419,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,9 +597,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sólidos Rígidos\n"
+     ]
+    }
+   ],
    "source": [
     "# Index\n",
     "print(cursos_IMEC[3])"
@@ -438,9 +615,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Introducción', 'Fundamentos', 'Dinámica', 'Sólidos Deformables', 'Conversión']\n"
+     ]
+    }
+   ],
    "source": [
     "# Modificación -> Cambiar \"Sólidos Rígidos\" => \"Sólidos Deformables\"\n",
     "cursos_IMEC[3] = \"Sólidos Deformables\"\n",
@@ -450,9 +635,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Introducción', 'Fundamentos', 'Dinámica', 'Sólidos Deformables', 'Conversión', 'Herramientas Computacionales']\n"
+     ]
+    }
+   ],
    "source": [
     "# Agregar\n",
     "cursos_IMEC.append(\"Herramientas Computacionales\")\n",
@@ -468,9 +661,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array1 = array2\n",
+      "Original: [1, 4, 9, 16, 25]\n",
+      "Copia: [1, 4, 9, 1000, 25]\n",
+      "Original: [1, 4, 9, 1000, 25]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"array1 = array2\")\n",
     "\n",
@@ -486,9 +691,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FUNCIÓN copy()\n",
+      "Original: [1, 4, 9, 16, 25]\n",
+      "Copia: [1, 4, 9, 1000, 25]\n",
+      "Original: [1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
    "source": [
     "# Pero, al usar la función 'copy()'\n",
     "print(\"FUNCIÓN copy()\")\n",
@@ -528,9 +744,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "\n",
@@ -556,9 +790,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(0, 10, 1): # range(first, last, step)\n",
     "    print(i)"
@@ -573,9 +824,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¡Bienvenido a, Introducción!\n",
+      "¡Bienvenido a, Fundamentos!\n",
+      "¡Bienvenido a, Dinámica!\n",
+      "¡Bienvenido a, Sólidos Deformables!\n",
+      "¡Bienvenido a, Conversión!\n",
+      "¡Bienvenido a, Herramientas Computacionales!\n"
+     ]
+    }
+   ],
    "source": [
     "for estudiante in cursos_IMEC:\n",
     "    print(\"¡Bienvenido a, {}!\".format(estudiante))"
@@ -583,9 +847,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-> Introducción, 0\n",
+      "-> Introducción, 2\n",
+      "-> Introducción, 4\n",
+      "-> Introducción, 6\n",
+      "-> Introducción, 8\n",
+      "\n",
+      "-> Fundamentos, 0\n",
+      "-> Fundamentos, 2\n",
+      "-> Fundamentos, 4\n",
+      "-> Fundamentos, 6\n",
+      "-> Fundamentos, 8\n",
+      "\n",
+      "-> Dinámica, 0\n",
+      "-> Dinámica, 2\n",
+      "-> Dinámica, 4\n",
+      "-> Dinámica, 6\n",
+      "-> Dinámica, 8\n",
+      "\n",
+      "-> Sólidos Deformables, 0\n",
+      "-> Sólidos Deformables, 2\n",
+      "-> Sólidos Deformables, 4\n",
+      "-> Sólidos Deformables, 6\n",
+      "-> Sólidos Deformables, 8\n",
+      "\n",
+      "-> Conversión, 0\n",
+      "-> Conversión, 2\n",
+      "-> Conversión, 4\n",
+      "-> Conversión, 6\n",
+      "-> Conversión, 8\n",
+      "\n",
+      "-> Herramientas Computacionales, 0\n",
+      "-> Herramientas Computacionales, 2\n",
+      "-> Herramientas Computacionales, 4\n",
+      "-> Herramientas Computacionales, 6\n",
+      "-> Herramientas Computacionales, 8\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Si concatenamos los for-loop...\n",
     "for i in cursos_IMEC:\n",
@@ -624,9 +931,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Suficiente\n"
+     ]
+    }
+   ],
    "source": [
     "puntaje = 81\n",
     "    \n",
@@ -649,9 +964,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seleccione un número: 5\n",
+      "Seleccione otro número: 2\n",
+      "Seleccione una operación: *\n",
+      "La multiplicación es:  10\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = input('Seleccione un número: ')\n",
     "num2 = input('Seleccione otro número: ')\n",
@@ -697,9 +1023,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n",
+      "La suma es:  8\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = input()\n",
     "num2 = input()\n",
@@ -719,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,9 +1072,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La división es:  0.5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "division(num1=1, num2=2)"
    ]
