--- a/content/week2/AC4_visualizaciones.ipynb
+++ b/content/week2/AC4_visualizaciones.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# IMEC2001 Herramientas Computacionales \n",
     "## Actividad Clase 4: Visualizaciones\n",
-    "### Fecha Límite Entrega (Bloque Neón): <font color=\"#FF5733\">17.20h de Agosto 22, 2022</font>\n",
+    "### Fecha Límite Entrega (Bloque Neón): <font color=\"#FF5733\">17.20h de Octubre 25, 2022</font>\n",
     "\n",
-    "Universidad de los Andes — Agosto 18, 2022.\n",
+    "Universidad de los Andes — Octubre 25, 2022.\n",
     "\n",
     "___\n",
     "### Tener en Cuenta\n",
@@ -198,7 +198,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
