--- a/content/week3/T3_CurvaBomba.ipynb
+++ b/content/week3/T3_CurvaBomba.ipynb
@@ -26,7 +26,7 @@
     "- La entrega del taller es por Bloque Neon y el formato de envío es Jupyter Notebook (extensión '.ipynb').\n",
     "- El nombre del archivo debe ser: T3_SalazarPeña_VargasTorres\n",
     "- En la casilla anterior a esta coloque el nombre de los integrantes del grupo.\n",
-    "- Si el taller solo lo envía <b>1</b> persona.\n",
+    "- El taller solo lo envía <b>1</b> integrante del grupo.\n",
     "___\n",
     "\n",
     "# Interpolación - Curva de una Bomba\n",
