--- a/content/week4/C8_factorfriccion.ipynb
+++ b/content/week4/C8_factorfriccion.ipynb
@@ -521,7 +521,7 @@
     "\n",
     "<div class=\"alert alert-block alert-success\">\n",
     "    \n",
-    "Por ejemplo, si inicialmente con la bomba centrífuga se lograda una altura manométrica de $10$ ft, ahora la cabeza será de $10 - 4.43$ ft, es decir, $5.57$ ft. Esto a causa de la fricción dentro de la tubería.\n",
+    "Por ejemplo, si inicialmente con la bomba centrífuga se lograba una altura manométrica de $10$ ft, ahora la cabeza será de $10 - 4.43$ ft, es decir, $5.57$ ft. Esto a causa de la fricción dentro de la tubería.\n",
     "\n",
     "</div>"
    ]
@@ -650,10 +650,15 @@
    "outputs": [],
    "source": [
     "# PASO 3. Estimar raíces\n",
+    "'''\n",
+    "Note que la el parámetro 'args=()' de la función optimize.root_scalar()\n",
+    "se agrega porque nuestra función de estudio 'colebrook_white()'\n",
+    "tiene más de un parámetro de entrada\n",
+    "'''\n",
     "raices = optimize.root_scalar(f=colebrook_white,\n",
     "                              bracket=rango,\n",
     "                              method='bisect',\n",
-    "                              args=(rug_rel, Re))\n",
+    "                              args=(rug_rel, Re))  # Note el parámetro args=()\n",
     "\n",
     "raices"
    ]
