--- a/content/week5/C9_sistemaecuaciones.ipynb
+++ b/content/week5/C9_sistemaecuaciones.ipynb
@@ -69,7 +69,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "# Raíces\n",
+    "# Sistema de Ecuaciones\n",
     "import numpy as np\n",
     "from scipy import optimize\n",
     "import sympy"
@@ -505,7 +505,7 @@
     "  \\\\\n",
     "  \\hspace{2.5cm} \\vdots \\\\\n",
     "  \\\\\n",
-    "   a_{m1}x_1 + a_{m2}x_2 + \\dots + a_{mn}x_n = b_m & (m) \\\\\n",
+    "   a_{m1}x_1 + a_{m2}x_2 + \\dots + a_{mn}x_n = b_n & (m) \\\\\n",
     "\\end{cases} \n",
     "$$\n",
     "\n",
@@ -1259,6 +1259,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# PASO 3. Solucionar el sistema de ecuaciones\n",
+    "sol = optimize.fsolve(func=f,\n",
+    "                      x0=[-5, 0])\n",
+    "\n",
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hor = 8\n",
     "ver = 5\n",
     "fig1 = plt.figure(figsize=(hor, ver), dpi=90)\n",
@@ -1548,9 +1561,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "hc",
    "language": "python",
-   "name": "python3"
+   "name": "hc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1562,7 +1575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
