--- a/content/week5/C10_estatica.ipynb
+++ b/content/week5/C10_estatica.ipynb
@@ -113,7 +113,7 @@
    "source": [
     "## 1.2. Momento Par o Torque\n",
     "\n",
-    "Uuna fuerza puede hacer girar un cuerpo alrededor de un eje, siempre y cuando el eje puede ser cualquier línea que no corte ni sea paralela a la línea de acción de la fuerza.\n",
+    "Una fuerza puede hacer girar un cuerpo alrededor de un eje, siempre y cuando el eje sea cualquier línea que no corte ni sea paralela a la línea de acción de la fuerza.\n",
     "\n",
     "Esta tendencia rotacional se conoce como el **momento par** $M$ o **torque** de la fuerza.\n",
     "\n",
@@ -841,13 +841,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1161,25 +1154,25 @@
    "outputs": [],
    "source": [
     "# PASO 2. Definir las funciones simbólicas\n",
-    "ec1 = sympy.Eq(5*T - 20*5 - 30*10, 0)\n",
+    "ec1 = sympy.Eq( 5*T - 20*5 - 30*10, 0 )\n",
     "\n",
-    "ec2 = sympy.Eq( T * np.cos(np.deg2rad(30)) - Ex, 0)\n",
+    "ec2 = sympy.Eq( T * np.cos(np.deg2rad(30)) - Ex, 0 )\n",
     "\n",
-    "ec3 = sympy.Eq( T * np.sin(np.deg2rad(30)) + Ey - 20 - 30, 0)\n",
+    "ec3 = sympy.Eq( T * np.sin(np.deg2rad(30)) + Ey - 20 - 30, 0 ) \n",
     "\n",
-    "ec4 = sympy.Eq( AB * np.sin(np.deg2rad(60)) - 30, 0)\n",
+    "ec4 = sympy.Eq( AB * np.sin(np.deg2rad(60)) - 30, 0 )\n",
     "\n",
-    "ec5 = sympy.Eq( AC - AB * np.cos(np.deg2rad(60)), 0)\n",
+    "ec5 = sympy.Eq( AC - AB * np.cos(np.deg2rad(60)), 0 )\n",
     "\n",
-    "ec6 = sympy.Eq( BC * np.cos(np.deg2rad(30)) - AB * np.cos(np.deg2rad(30)), 0)\n",
+    "ec6 = sympy.Eq( BC * np.cos(np.deg2rad(30)) - AB * np.cos(np.deg2rad(30)), 0 )\n",
     "\n",
-    "ec7 = sympy.Eq( BD - BC * np.sin(np.deg2rad(30)) - AB * np.sin(np.deg2rad(30)), 0)\n",
+    "ec7 = sympy.Eq( BD - BC * np.sin(np.deg2rad(30)) - AB * np.sin(np.deg2rad(30)), 0 )\n",
     "\n",
-    "ec8 = sympy.Eq( CD * np.sin(np.deg2rad(60)) - BC * np.sin(np.deg2rad(60)) - 20, 0)\n",
+    "ec8 = sympy.Eq( CD * np.sin(np.deg2rad(60)) - BC * np.sin(np.deg2rad(60)) - 20, 0 )\n",
     "\n",
-    "ec9 = sympy.Eq( CE - AC - BC * np.cos(np.deg2rad(60)) - CD * np.cos(np.deg2rad(60)), 0)\n",
+    "ec9 = sympy.Eq( CE - AC - BC * np.cos(np.deg2rad(60)) - CD * np.cos(np.deg2rad(60)), 0 )\n",
     "\n",
-    "ec10 = sympy.Eq( DE * np.sin(np.deg2rad(60)) - 10, 0)"
+    "ec10 = sympy.Eq( DE * np.sin(np.deg2rad(60)) - 10, 0 )"
    ]
   },
   {
@@ -1198,9 +1191,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "hc",
    "language": "python",
-   "name": "python3"
+   "name": "hc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1212,7 +1205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
