--- a/content/week4/C8_factorfriccion.ipynb
+++ b/content/week4/C8_factorfriccion.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,9 +235,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "278468.89952153113"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def reynolds(densidad, velocidad, diametro, viscosidad):\n",
     "    return densidad*velocidad*diametro / viscosidad   \n",
@@ -265,9 +276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0008"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rug_rel = rug / D\n",
     "rug_rel"
@@ -335,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,9 +383,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.019169261175384523\n"
+     ]
+    }
+   ],
    "source": [
     "## 3.2. Primera estimación manual\n",
     "f_asumido = 0.1\n",
@@ -389,9 +419,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08083073882461549"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.abs( f_asumido - valor_lado_derecho )"
    ]
@@ -405,9 +446,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.019833359174517264\n",
+      "0.000833359174517264\n"
+     ]
+    }
+   ],
    "source": [
     "## 3.3. Segunda estimación manual\n",
     "f_asumido = 0.019\n",
@@ -436,9 +486,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ITERACIÓN 1 | Asumido: 0.1 | Estimado: 0.019169261175384523 | Dif: 0.08083073882461549\n",
+      "ITERACIÓN 2 | Asumido: 0.019169261175384523 | Estimado: 0.01982837216966721 | Dif: 0.0006591109942826884\n"
+     ]
+    }
+   ],
    "source": [
     "## 3.4. Creamos el while loop\n",
     "dif = 100\n",
@@ -462,9 +521,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01982837216966721\n"
+     ]
+    }
+   ],
    "source": [
     "print(f_asumido)"
    ]
@@ -486,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,9 +567,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.433673280174035"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# PASO 2. Evaluamos la función\n",
     "hf = perdida_carga(coef_friccion=f_asumido, \n",
@@ -564,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,9 +666,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.01981005])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# PASO 3. Estimar raíz\n",
     "'''\n",
@@ -621,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,9 +734,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/y_/9s04mk215pxfftn0yp96n17c0000gn/T/ipykernel_4100/4027665249.py:4: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  valor = (1 / np.sqrt(coef_friccion)) + (2 * np.log10( (rug_relativa/3.7) + (2.51 / (reynolds*np.sqrt(coef_friccion))) ) )\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "      converged: True\n",
+       "           flag: 'converged'\n",
+       " function_calls: 38\n",
+       "     iterations: 36\n",
+       "           root: 0.01981004717672477"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# PASO 3. Estimar raíces\n",
     "'''\n",
@@ -678,9 +790,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle f$"
+      ],
+      "text/plain": [
+       "f"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# PASO 1. Definir la variable simbólica\n",
     "coef_friccion = sympy.Symbol('f')\n",
@@ -689,9 +815,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle f^{-0.5} + 2 \\log{\\left(\\frac{9.01357388316151 \\cdot 10^{-6}}{f^{0.5}} + 0.000216216216216216 \\right)}$"
+      ],
+      "text/plain": [
+       "f**(-0.5) + 2*log(9.01357388316151e-6/f**0.5 + 0.000216216216216216)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# PASO 2. Definir la función simbólica\n",
     "colebrook_white = (1 / coef_friccion**0.5) + (2 * sympy.log( (rug_rel/3.7) + (2.51 / (Re*coef_friccion**0.5) ) ) ) \n",
@@ -700,9 +840,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left\\{\\left( \\left\\{f\\; \\middle|\\; f \\in \\mathbb{C} \\wedge f^{-0.5} + 2 \\log{\\left(\\frac{9.01357388316151 \\cdot 10^{-6}}{f^{0.5}} + 0.000216216216216216 \\right)} = 0 \\right\\},\\right)\\right\\}$"
+      ],
+      "text/plain": [
+       "{(ConditionSet(f, Eq(f**(-0.5) + 2*log(9.01357388316151e-6/f**0.5 + 0.000216216216216216), 0), Complexes),)}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# PASO 3. Estimar raíces\n",
     "raices = sympy.nonlinsolve([colebrook_white], [coef_friccion]) # Los parámetros son `([ecuaciones], [símbolos])`; cada uno es una lista\n",
@@ -728,7 +882,6 @@
     "\n",
     "> ```python\n",
     "  pip install colebrook\n",
-    "  ```\n",
     "\n",
     "<div class='alert alert-block alert-info'>   \n",
     "    \n",
@@ -748,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,9 +920,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "coef_friccion"
    ]
