--- a/content/week6/C11y12_optimizacion.ipynb
+++ b/content/week6/C11y12_optimizacion.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "Los elementos que componen un ejercicio de optimización son:\n",
     "\n",
-    "- **Variables de decisión:** Selección de las variables independientes que sean adecuadas para caracterizar los posibles diseños candidatos y las condiciones de funcionamiento del sistema. Como variables independientes se sueleng elegir aquellas que tienen un impacto significativo sobre la función objetivo.\n",
+    "- **Variables de decisión:** Selección de las variables independientes que sean adecuadas para caracterizar los posibles diseños candidatos y las condiciones de funcionamiento del sistema. Como variables independientes se suelen elegir aquellas que tienen un impacto significativo sobre la función objetivo.\n",
     "\n",
     "- **Restricciones:** Establecer mediante ecuaciones las relaciones existentes entre las variables de decisión. Estas relaciones son debidas, por ejemplo, a limitaciones en el sistema, a leyes naturales o a limitaciones tecnológicas.\n",
     "\n",
@@ -958,7 +958,7 @@
     "  \\text{Maximizar} & \\eta = \\frac{\\rho g Q H}{w T}\\\\ \n",
     "  \\\\\n",
     "  \\text{S.T.} & \\begin{cases}\n",
-    "                  H - h_f = H - f \\frac{L}{D} \\frac{V^2}{2g} \\leq 50 & (1)\\\\\n",
+    "                  h_f = f \\frac{L}{D} \\frac{V^2}{2g} \\leq 50 & (1)\\\\\n",
     "                  \\\\\n",
     "                  \\text{Re} = \\frac{\\rho V D}{\\mu} \\leq 300000 & (2)\\\\\n",
     "                  \\\\\n",
@@ -1003,7 +1003,7 @@
     "  \\text{Minimizar} & -\\eta = -\\frac{\\rho g Q H}{w T}\\\\ \n",
     "  \\\\\n",
     "  \\text{S.T.} & \\begin{cases}\n",
-    "                  H - h_f = H - f \\frac{L}{D} \\frac{V^2}{2g} \\leq 50 & (1)\\\\\n",
+    "                  h_f = f \\frac{L}{D} \\frac{V^2}{2g} \\leq 50 & (1)\\\\\n",
     "                  \\\\\n",
     "                  \\text{Re} = \\frac{\\rho V D}{\\mu} \\leq 300000 & (2)\\\\\n",
     "                  \\\\\n",
@@ -1117,7 +1117,7 @@
     "    T = z[3]\n",
     "    \n",
     "    # Restricción\n",
-    "    res = H - (H - (0.02 * (200/0.5) * (((Q/0.1963)**2)/(2*32.2)))) - 50\n",
+    "    res = (0.02 * (200/0.5) * (((Q/0.1963)**2)/(2*32.2))) - 50\n",
     "    \n",
     "    return res\n",
     "\n",
@@ -1311,9 +1311,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "hc",
    "language": "python",
-   "name": "python3"
+   "name": "hc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1325,7 +1325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
