--- a/content/week5/T5_sistemaecuaciones.ipynb
+++ b/content/week5/T5_sistemaecuaciones.ipynb
@@ -396,7 +396,7 @@
    "source": [
     "### Ejercicio 2\n",
     "\n",
-    "Determine la magnitud de las fuerzas C y T. \n",
+    "Determine la magnitud de las fuerzas A y B. \n",
     "\n",
     "<img src=\"./img/ejercicio3.jpg\" width='400' height='400'/>\n",
     "\n"
