--- a/content/week7/C13_incertidumbre.ipynb
+++ b/content/week7/C13_incertidumbre.ipynb
@@ -422,7 +422,7 @@
    "outputs": [],
    "source": [
     "# Incertidumbre Eje Y\n",
-    "Uy = np.random.normal(loc=0.0, scale=1.0, size=len(df))\n",
+    "Uy = abs(np.random.normal(loc=0.0, scale=1.0, size=len(df)))\n",
     "Uy"
    ]
   },
@@ -433,7 +433,7 @@
    "outputs": [],
    "source": [
     "# Incertidumbre Eje X\n",
-    "Ux = np.random.normal(loc=0.0, scale=0.3, size=len(df))\n",
+    "Ux = abs(np.random.normal(loc=0.0, scale=0.3, size=len(df)))\n",
     "Ux"
    ]
   },
@@ -519,9 +519,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "hc",
    "language": "python",
-   "name": "python3"
+   "name": "hc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -533,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
